1.1.0 (trunk):
* blkback: functorise over Activations.
* Depend on `xen-grant` and `xen-event` libraries rather than `xenctrl`.
* Remove `OS` module, depend on `io-page` (no `-unix` or `-xen`).
* Only use the high-level Activations.after interface.

1.0.0 (10-Dec-2013):
* Add ISC copyrights everywhere.
* Indent code with `ocp-indent`.

0.5.0 (8-Dec-2013)
* Block.connect: if we don't recognise the id, default to the
  first available disk.

0.4.0 (8-Dec-2013)
* implement new mirage-types BLOCK interface

0.2.5 (10-Nov-2013)
* fix build against cstruct.0.8.0
* blkfront write_page only needs to grant read access to
  the backend driver

0.2.4 (13-Oct-2013)
* fix reading non-page aligned sectors

0.2.3 (5-Oct-2013):
* add Travis continuous integration scripts.
* use new Activations.after interface

0.2.2 (8-Aug-2013):
* update to mirage-platform 0.9.4

0.2.0 (17-Jul-2013):
* blkback has significantly increased performance through
  mapping all requests on the ring simultaneously

0.1.3 (14-Jul-2013):
* 32-bit guest support fixed
* fixed critical bug in previous version which caused pages
  to be mapped with the wrong protection flags, leading to
  immediate segfaults on write

0.1.2 (4-Jul-2013):
* updated following mirage-xen Gnttab API change
