@@ -3,6 +3,7 @@
 * Depend on `xen-grant` and `xen-event` libraries rather than `xenctrl`.
 * Remove `OS` module, depend on `io-page` (no `-unix` or `-xen`).
 * Only use the high-level Activations.after interface.
+* blkfront: allow 'connect' to take '51712' (bus slot) or 'xvda' or '/dev/xvda'
 
 1.0.0 (10-Dec-2013):
 * Add ISC copyrights everywhere.
